# ImageProcessingAPI

./: .gitmodules  CMakeLists.txt  LICENSE
api/: routes.cpp  server.cpp  swagger.yaml
include/: image_processor.hpp
src/: image_processor.cpp  main.cpp
src/cuda/: image_processor.cu  image_processor.cuh
